--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@types/three": "^0.144.0",
-    "three": "^0.145.0"
+    "three": "^0.145.0",
+    "typescript": "^4.8.4"
   }
 }
