--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@types/three": "^0.144.0",
+    "poisson-disk-sampling": "^2.3.1",
     "three": "^0.145.0"
   }
 }
